# -Real-Time-Edge-Detection-Viewer

./: .gitignore  README.md  settings.gradle.kts
app/: .gitignore  build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/: fragment_shader.glsl  vertex_shader.glsl
app/src/main/cpp/: CMakeLists.txt  edge_processor.cpp  edge_processor.h  native-lib.cpp
app/src/main/java/com/example/edgeviewer/: CameraController.kt  GLRenderer.kt  GLSurface.kt  GLUtils.kt  GLView.kt  ImageSaver.kt  MainActivity.kt  NativeEdge.kt  Shader.kt  WebServer.kt
app/src/main/res/drawable/: btn_modern.xml  btn_primary.xml  glass_bg.xml  rounded_btn.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/layout-land/: activity_main.xml
app/src/main/res/values/: themes.xml
app/src/main/res/values-night/: themes.xml
app/web/: index.html  package-lock.json  package.json  styles.css  tsconfig.json  viewer.js  viewer.ts
app/web/src/: main.ts
gradle/wrapper/: gradle-wrapper.properties
